--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,19 @@ spring:
     multipart:
       max-file-size: 5MB
       max-request-size: 50MB
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
+    database: 0 #操作的是0号数据库,默认提供16个数据库
+    jedis:
+      #Redis连接池配置
+      pool:
+        max-active: 8 #最大连接数
+        max-wait: 1ms #连接池最大阻塞等待时间
+        max-idle: 4 #连接池中的最大空闲连接
+        min-idle: 0 #连接池中的最小空闲连接
+
   #数据源配置
   datasource:
     #说明： 如果没有使用useSSL=true, 会报红警告
