--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,9 @@ spring:
         max-wait: 1ms #连接池最大阻塞等待时间
         max-idle: 4 #连接池中的最大空闲连接
         min-idle: 0 #连接池中的最小空闲连接
-
+  cache:
+    redis:
+      time-to-live: 1800000 #设置缓存过期时间，可选
   #数据源配置
   datasource:
     #说明： 如果没有使用useSSL=true, 会报红警告
